# ufr-ds

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-npm.yml  publish-pypi.yml  workflow.yml
docs/: USAGE.md  onepager.md
emergence_engine/: __init__.py  cli.py  emergence.py  engine.py  grammar.py  mdl.py  repair.py  sequitur.py  symbols.py  tokenizer.py  viz.py
examples/react-mini/: Button.jsx
tools/js-tokenizer/: README.md  index.js  package.json
ufr_ds/: cli.py  engine_suggest.py  families.py  generator.py  llm.py  react_tokenizer.py  report.py  tokenizer_node_bridge.py
